<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epic to-do list</string>

    <string name="empty">Empty</string>

    <string name="check_your_task_list">Check your task list!</string>
    <string name="there_are_no_tasks">There are no tasks.</string>
    <string name="loading">Loading…</string>
    <string name="widget_not_unlocked">You have not unlocked this widget!</string>

    <string name="ask">Ask</string>
    <string name="choose_language">Choose language</string>

    <string name="brows">Brows</string>
    <string name="extras">Extras</string>
    <string name="ears">Ears</string>
    <string name="eyes">Eyes</string>
    <string name="beard">Beard</string>
    <string name="hair">Hair</string>

    <string name="costume">Costume</string>
    <string name="theme">Theme</string>
    <string name="weapon">Weapon</string>
    <string name="location">Location</string>
    <string name="feature">Feature</string>
    <string name="weapons">Weapons</string>
    <string name="body_color">Body color</string>
    <string name="hair_color">Hair color</string>
    <string name="attributes">Attributes</string>
    <string name="statistics">Statistics</string>
    <string name="achievements_achieved">Achievements achieved</string>
    <string name="unlocked_items">Unlocked items</string>

    <string name="gladiator">Gladiator</string>
    <string name="complete_20_tasks_with_the_strength_attribute_skill">Complete 20 tasks with the strength attribute skill</string>
    <string name="thinker">Thinker</string>
    <string name="complete_20_tasks_with_the_intellect_attribute_skill">Complete 20 tasks with the intellect attribute skill</string>
    <string name="wizard">Wizard</string>
    <string name="complete_20_tasks_with_the_creation_attribute_skill">Complete 20 tasks with the creation attribute skill</string>
    <string name="healer">Healer</string>
    <string name="complete_20_tasks_with_the_health_attribute_skill">Complete 20 tasks with the health attribute skill</string>
    <string name="easy_peasy">Easy peasy</string>
    <string name="complete_10_easy_tasks">Complete 10 easy tasks</string>
    <string name="not_difficult">Not difficult</string>
    <string name="complete_10_middle_tasks">Complete 10 middle tasks</string>
    <string name="difficulties_cannot_be_avoided">Difficulties cannot be avoided</string>
    <string name="complete_10_hard_tasks">Complete 10 hard tasks</string>
    <string name="legend">Legend</string>
    <string name="complete_10_legendary_tasks">Complete 10 legendary tasks</string>

    <string name="night">Night</string>
    <string name="night_theme">Night theme</string>
    <string name="castle">Castle</string>
    <string name="sakura">Sakura</string>
    <string name="pink_theme">Pink theme</string>
    <string name="leather_suit">Leather suit</string>
    <string name="warrior_of_chaos">Warrior of chaos</string>
    <string name="the_healer">The healer</string>
    <string name="hermit">Hermit</string>
    <string name="hero_sword">Hero sword</string>
    <string name="magicians_staff">Magician\'s staff</string>
    <string name="blades_of_fury">Blades of Fury</string>
    <string name="chaos_axes">Chaos Axes</string>
    <string name="elven_bow">Elven bow</string>
    <string name="themes_never_happen_much">Themes never happen much</string>
    <string name="unlock_5_themes">Unlock 5 themes</string>
    <string name="armed_to_the_teeth">Armed to the teeth</string>
    <string name="unlock_5_weapons">Unlock 5 weapons</string>
    <string name="elegant">Elegant</string>
    <string name="unlock_5_costumes">Unlock 5 costumes</string>
    <string name="traveler">Traveler</string>
    <string name="unlock_5_locations">Unlock 5 locations</string>
    <string name="functional">Functional</string>
    <string name="unlock_5_features">Unlock 5 features</string>
    <string name="headgear_is_missing">Headgear is missing</string>
    <string name="forest_elf">Forest elf</string>
    <string name="or">Or</string>
    <string name="to_change_hero">To change hero</string>
    <string name="use_200_coins">Use 200 coins</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_do_this">Are you sure you want to do this?</string>
    <string name="confirm_action">Confirm action</string>
    <string name="cancel">Cancel</string>
    <string name="new_task">New task</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="read_privacy_policy">Read privacy policy</string>
    <string name="i_have_read_the_privacy_policy">I have read the privacy policy</string>
    <string name="unlock">Unlock</string>
    <string name="try_on">Try on</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="change_account">Change account</string>
    <string name="remove_hero">Remove hero</string>
    <string name="confirm_remove_hero">All your data will be erased. Are you sure you want to delete your hero?</string>
    <string name="hero_has_been_deleted">Hero has been deleted</string>
    <string name="new_version_available">A new version of the application is available on the Play Market!</string>
    <string name="update">Update</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="notification">Notification</string>
    <string name="send">send</string>
    <string name="take_the_creator_survey">Take the creator survey</string>
    <string name="next">Next</string>
    <string name="survey">Survey</string>
    <string name="thanks_feedback">Thanks for the feedback. You help improve the project.</string>
    <string name="font_size">Font size</string>
    <string name="example">(Example)</string>
    <string name="hero_progress_graph">Progress graph</string>
    <string name="start_date">Start date</string>
    <string name="final_date">Final date</string>
    <string name="build_a_graph">Build a graph</string>
    <string name="daily_progress">Daily progress</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="adjust_interval">Adjust interval</string>
    <string name="please_wait">Please wait</string>
    <string name="reward">Reward</string>
    <string name="details">Details</string>
    <string name="price_per_piece">Price per piece</string>
    <string name="date_of_completion">Date of completion</string>
    <string name="challenges">Challenges</string>
    <string name="challenge">Challenge</string>
    <string name="tasks">Tasks</string>
    <string name="not_active">Not active</string>
    <string name="days_left">Days left</string>
    <string name="not_done">Not done</string>
    <string name="completed">Completed</string>
    <string name="failed">Failed</string>
    <string name="fail">Fail</string>
    <string name="start">Start</string>
    <string name="challenge_completed_successfully">Challenge completed successfully!</string>
    <string name="the_challenge_is_a_failure">The challenge is a failure!</string>
    <string name="the_day_is_completed_successfully">The day is completed successfully!</string>
    <string name="add_task">Add task</string>
    <string name="number_of_days">Number of days</string>
    <string name="no_skills">There are no skills.</string>
    <string name="there_are_no_completed_tasks">There are no completed tasks.</string>
    <string name="there_are_no_current_tasks">There are no current tasks.</string>
    <string name="there_are_no_repeatable_tasks">There are no repeatable tasks.</string>
    <string name="there_are_no_challenges">There are no challenges.</string>
    <string name="there_are_no_notifications">There are no notifications.</string>
    <string name="changes_have_been_accepted">Changes have been accepted</string>
    <string name="translation_michael_taroni">Thanks to Michael Taroni for the Italian translation</string>
    <string name="repeatableTasks_doNotCreateIfExists">Do not create if already exists</string>

    <string name="music_settings_dialog_title">Sounds</string>
    <string name="music_settings_dialog_select_background_music_button">Set background music</string>
    <string name="music_settings_dialog_background_volume">BGM volume: %d%%</string>
    <string name="music_settings_dialog_file_loaded">File uploaded successfully</string>
    <string name="music_settings_dialog_file_not_loaded">Failed to load file</string>
    <string name="music_settings_dialog_files_access_denied">No permission to access files</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="error">Error</string>

</resources>
